# Piscine-Python

./: tests.py
Module_0/ex0/: ft_hello_garden.py
Module_0/ex1/: ft_garden_name.py  ft_plot_area.py
Module_0/ex2/: ft_harvest_total.py  ft_plot_area.py
Module_0/ex3/: ft_harvest_total.py  ft_plant_age.py
Module_0/ex4/: ft_plant_age.py  ft_water_reminder.py
Module_0/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py  ft_water_reminder.py
Module_0/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py  ft_garden_summary.py
Module_0/ex7/: ft_seed_inventory.py
Module_01/ex0/: ft_garden_intro.py
Module_01/ex1/: ft_garden_data.py
Module_01/ex2/: ft_plant_growth.py
Module_01/ex3/: ft_plant_factory.py
Module_01/ex4/: ft_garden_security.py
Module_01/ex5/: ft_plant_types.py
Module_01/ex6/: ft_garden_analytics.py
Module_02/ex0/: ft_first_exception.py
Module_02/ex1/: ft_raise_exception.py
Module_02/ex2/: ft_different_errors.py.py
Module_02/ex3/: ft_custom_errors.py
Module_02/ex4/: ft_finally_block.py
Module_03/ex0/: ft_command_quest.py
Module_03/ex1/: ft_score_analytics.py
Module_03/ex2/: ft_coordinate_system.py
Module_03/ex3/: ft_achievement_tracker.py
Module_03/ex4/: ft_inventory_system.py
Module_03/ex5/: ft_data_stream.py
Module_03/ex6/: ft_data_alchemist.py
Module_06/: ft_alembic_4.py  ft_kaboom_0.py  ft_kaboom_1.py
Module_07/: __init__.py  battle.py  capacitor.py  tournament.py
Module_08/ex1/: loading.py  pyproject.toml
cours/: module00_cours(1).html  module01_cours.html
(+36 files in other folders)
